--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        >
+        android:screenOrientation="portrait">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -19,7 +19,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" >
+        <activity android:name=".LoginActivity"
+                  android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".SignUpActivity"
+            android:screenOrientation="portrait"
+
+            android:parentActivityName=".LoginActivity">
         </activity>
     </application>
 
