cant get the R. files to work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,8 @@
             android:name=".EditFriendsActivity"
             android:screenOrientation="portrait" >
         </activity>
-        <activity android:name=".RecipientsActivity"
+        <activity
+            android:name=".RecipientsActivity"
                   android:screenOrientation="portrait">
         </activity>
     </application>
