--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,15 @@ buildscript {
         }
     }
 
-    dependencies {
-//        compile fileTree(dir: 'libs', include: ['*.jar'])
-//        testCompile 'junit:junit:4.12'
-        compile 'com.android.support:appcompat-v7:23.0.1'
-        compile 'com.android.support:design:23.0.1'
-        compile 'com.parse.bolts:bolts-android:1.2.1'
-        compile 'com.parse:parse-android:1.10.3'
-    }
+dependencies {
+
+    //        compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    //        testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:design:23.0.1'
+    compile 'com.parse.bolts:bolts-android:1.2.1'
+    compile 'com.parse:parse-android:1.10.3'
+    compile fileTree(dir: 'libs', include: "commons-io-2.4.jar")
+    compile files('src/main/res/libs/commons-io-2.4.jar')
+}
